--- a/app/views/pre-registration/v1/index.html
+++ b/app/views/pre-registration/v1/index.html
@@ -24,7 +24,7 @@
 
       <p class="govuk-body govuk-!-font-size-24">
         Register for a coronavirus (COVID-19) test at a test site for you or someone else.<br><br>
-        You need to register your coronavirus test so you can get your results, up to 24 hours before your appointment.
+        You need to register your coronavirus test so you can get your results. You must do this within 24 hours of your appointment.
       </p>
 
       <h3 class="govuk-heading-s">What you’ll need:</h3>
